@@ -33,6 +33,8 @@
 	* themes/smaker/README.ja
 	* themes/smaker/README.pl: change encoding to UTF8 (latin -1 + -2 previously) [Teika Kazura]
 
+	* scripts/sawfish-client.jl: added `,quit' command (like `C-d'), unlike `C-c' this won't kill sawfish [Teika Kazura]
+
 2009-09-11  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in
 	* Makedefs.in
